<resources>
    <string name="app_name">Constraint Layout 1.1</string>
    <string name="short_text">Short</string>
    <string name="kinda_long_text">Kinda Long</string>
    <string name="gatsby_text">In my younger and more vulnerable years my father gave me some advice that I\'ve been turning over in my mind ever since.

"Whenever you feel like criticizing any one," he told me, "just remember that all the people in this world haven't had the advantages that you've had."

He didn\'t say any more but we\'ve always been unusually communicative in a reserved way, and I understood that he meant a great deal more than that. In consequence I\'m inclined to reserve all judgments, a habit that has opened up many curious natures to me and also made me the victim of not a few veteran bores. The abnormal mind is quick to detect and attach itself to this quality when it appears in a normal person, and so it came about that in college I was unjustly accused of being a politician, because I was privy to the secret griefs of wild, unknown men. Most of the confidences were unsought—frequently I have feigned sleep, preoccupation, or a hostile levity when I realized by some unmistakable sign that an intimate revelation was quivering on the horizon &#8212; for the intimate revelations of young men or at least the terms in which they express them are usually plagiaristic and marred by obvious suppressions. Reserving judgments is a matter of infinite hope. I am still a little afraid of missing something if I forget that, as my father snobbishly suggested, and I snobbishly repeat, a sense of the fundamental decencies is parcelled out unequally at birth.</string>
    <string name="with_barrier">With Barrier</string>
    <string name="without_barrier">Without Barrier</string>
    <string name="barriers">Barriers</string>
    <string name="circular_constraints">Circular Constraints</string>
    <string name="increase_inner_angle">+15° Inner Element</string>
    <string name="increase_outer_angle">+15° Outer Element</string>
    <string name="center_item">Center Item</string>
    <string name="reset">Reset</string>
    <string name="_15_dp_outer_radius">+15 DP Outer Radius</string>
    <string name="_15_dp_inner_radius">+15 DP Inner Radius</string>
    <string name="percent_ratio_text"><![CDATA[Dimension Constraints (Percent & Ratio)]]></string>
    <string name="percent_0_100">Percent (0–100):</string>
    <string name="percent_text"> %1$d percent</string>
    <string name="default_percentage">10</string>
    <string name="placeholders">Placeholders</string>
    <string name="placeholders_rotation">Placeholders (Rotation)</string>
    <string name="groups">Groups</string>
    <string name="text_6">Text 6</string>
    <string name="text_5">Text 5</string>
    <string name="text_4">Text 4</string>
    <string name="text_3">Text 3</string>
    <string name="text_2">Text 2</string>
    <string name="text_1">Text 1</string>

    <string name="visibility_toggles">Visibility Toggles</string>

    <string name="first_half_visible">First Half (Visible)</string>
    <string name="first_half_gone">First Half (Gone)</string>

    <string name="second_half_visible">Second Half (Visible)</string>
    <string name="second_half_gone">Second Half (Gone)</string>

    <string name="even_group_visible">Even (Visible)</string>
    <string name="even_group_gone">Even (Gone)</string>

    <string name="odd_group_visible">Odd (Visible)</string>
    <string name="odd_group_gone">Odd (Gone)</string>

    <string name="here_come">Here come Dat Boi</string>
    <string name="go_fast">Gotta go fast</string>
</resources>
