<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/incrementInnerAngle"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin"
        android:text="@string/increase_inner_angle"
        app:layout_constraintEnd_toStartOf="@+id/incrementOuterAngle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/incrementOuterAngle"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/increase_outer_angle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/incrementInnerAngle"
        app:layout_constraintTop_toTopOf="@id/incrementInnerAngle" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/incrementInnerRadius"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin"
        android:text="@string/_15_dp_inner_radius"
        app:layout_constraintEnd_toStartOf="@+id/incrementOuterRadius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/incrementInnerAngle" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/incrementOuterRadius"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_15_dp_outer_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/incrementInnerRadius"
        app:layout_constraintTop_toTopOf="@id/incrementInnerRadius" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/reset"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="@id/incrementInnerAngle"
        app:layout_constraintStart_toStartOf="@id/incrementInnerAngle"
        app:layout_constraintTop_toBottomOf="@id/incrementInnerRadius" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/autorotate"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="AutoRotate On/Off"
        app:layout_constraintTop_toTopOf="@id/reset"
        app:layout_constraintStart_toStartOf="@id/incrementOuterAngle"
        app:layout_constraintEnd_toEndOf="@id/incrementOuterAngle"/>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/centerElement"
        android:layout_width="@dimen/circle_diameter"
        android:layout_height="@dimen/circle_diameter"
        android:contentDescription="@string/center_item"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/innerElement"
        android:layout_width="@dimen/circle_diameter"
        android:layout_height="@dimen/circle_diameter"
        android:contentDescription="@string/center_item"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintCircle="@id/centerElement"
        app:layout_constraintCircleAngle="0"
        app:layout_constraintCircleRadius="@dimen/inner_radius" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/outerElement"
        android:layout_width="@dimen/circle_diameter"
        android:layout_height="@dimen/circle_diameter"
        android:contentDescription="@string/center_item"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintCircle="@id/centerElement"
        app:layout_constraintCircleAngle="0"
        app:layout_constraintCircleRadius="@dimen/outer_radius" />
</android.support.constraint.ConstraintLayout>