<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/percentEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/percent_0_100"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/percent_0_100"
            android:inputType="number"
            android:text="@string/default_percentage" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/percentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin"
        android:layout_marginTop="@dimen/base_margin"
        android:text="@string/percent_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/percentEntry"
        tools:text="10 percent" />

    <View
        android:id="@+id/percentView"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:background="#FF1234FF"
        app:layout_constraintStart_toStartOf="@id/percentText"
        app:layout_constraintTop_toBottomOf="@id/percentText"
        app:layout_constraintWidth_percent="0.1" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/constraintDimenRatioText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin_double"
        android:text="layout_constraintDimensionRatio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/percentView" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/oneToOneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin"
        android:text="1:1"
        app:layout_constraintEnd_toStartOf="@+id/floatRatioText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintDimenRatioText" />

    <View
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:background="#FF2222"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@+id/oneToOneText"
        app:layout_constraintStart_toStartOf="@+id/oneToOneText"
        app:layout_constraintEnd_toEndOf="@+id/oneToOneText"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/floatRatioText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="H/W ratio of 0.4"
        app:layout_constraintEnd_toEndOf="@+id/specifyWidthRatioText"
        app:layout_constraintStart_toEndOf="@+id/oneToOneText"
        app:layout_constraintTop_toTopOf="@+id/oneToOneText" />

    <View
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:background="#FF2222"
        app:layout_constraintDimensionRatio="0.4"
        app:layout_constraintTop_toBottomOf="@+id/floatRatioText"
        app:layout_constraintStart_toStartOf="@+id/floatRatioText"
        app:layout_constraintEnd_toEndOf="@+id/floatRatioText"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/specifyWidthRatioText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="W, 16:9"
        app:layout_constraintStart_toEndOf="@+id/floatRatioText"
        app:layout_constraintEnd_toStartOf="@+id/specifyHeightRatioText"
        app:layout_constraintTop_toTopOf="@+id/oneToOneText" />

    <View
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:background="#FF2222"
        app:layout_constraintDimensionRatio="W,16:9"
        app:layout_constraintTop_toBottomOf="@+id/specifyWidthRatioText"
        app:layout_constraintStart_toStartOf="@+id/specifyWidthRatioText"
        app:layout_constraintEnd_toEndOf="@+id/specifyWidthRatioText"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/specifyHeightRatioText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="H, 16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/specifyWidthRatioText"
        app:layout_constraintTop_toTopOf="@+id/oneToOneText" />

    <View
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:background="#FF2222"
        app:layout_constraintDimensionRatio="H,16:9"
        app:layout_constraintTop_toBottomOf="@+id/specifyHeightRatioText"
        app:layout_constraintStart_toStartOf="@+id/specifyHeightRatioText"
        app:layout_constraintEnd_toEndOf="@+id/specifyHeightRatioText"/>

</android.support.constraint.ConstraintLayout>